Add insights endpoint
